package br.com.caio.padroes.comportamentais.strategy;

public interface Strategy {
    int execute(int a, int b);
}